fix #45: cosr 수정